--- a/monitor/templates/main.html
+++ b/monitor/templates/main.html
@@ -4,67 +4,65 @@
 {% block title %}CHAMPSS Timing Monitor{% endblock %}
 
 {% block content %}
-    <table class="table">
-        <tbody>
             {% for this_source in sources %}
-                <tr onclick="window.location.href='/diagnostic/{{this_source.psr_id}}';" style="cursor:pointer;">
-                    <td>
-                        <h4 style="margin-bottom: 0;">{{this_source.psr_id}}</h4>
-                        <small>Updated on {{this_source.get_last_updated()}}</small>
-                    </td>
-                    <td style="width:85%;height:3em;"><div id="resids_{{this_source.psr_id}}" style="width:100%;height:3em;"></div></td>
+                <div class="card" style="margin-bottom: 15px; ">
+                    <div class="card-body">
+                        <div onclick="window.location.href='/diagnostic/{{this_source.psr_id}}';" style="cursor:pointer;">
+                            <small style="float: right; ">Updated on {{this_source.get_last_updated()}}</small>
+                            <h4 style="margin-bottom: 0;">{{this_source.psr_id}}</h4>
+                            <div id="resids_{{this_source.psr_id}}" style="width:100%;height:3em;"></div>
 
-                    <script>
-                        var resids = {{this_source.get_resids() | safe}};
-                        var resids_plot = {
-                            x: resids["mjd"],
-                            y: resids["val"],
-                            error_y: {
-                                type: 'data',
-                                array: resids["err"],
-                                visible: true
-                            },
-                            mode: 'markers',
-                            type: 'scatter', 
-                            marker: {
-                                color: 'black'
-                            }
-                        };
-                        var resids_layout = {
-                            // title: 'Residuals for {{this_source.psr_id}}',
-                            xaxis: {
-                                // title: 'MJD', 
-                                showticklabels: false,
-                                showline: false,
-                                showgrid: false,
-                                zeroline: true
-                            },
-                            yaxis: {
-                                // title: 'Residual (us)', 
-                                showticklabels: false,
-                                showline: false,
-                                showgrid: false,
-                                zeroline: true
-                            }, 
-                            showlegend: false, 
-                            margin: {'t':0,'l':0,'b':0,'r':0}
-                        };
+                            <script>
+                                var resids = {{this_source.get_resids() | safe}};
+                                var resids_plot = {
+                                    x: resids["mjd"],
+                                    y: resids["val"],
+                                    error_y: {
+                                        type: 'data',
+                                        array: resids["err"],
+                                        visible: true
+                                    },
+                                    mode: 'markers',
+                                    type: 'scatter',
+                                    marker: {
+                                        color: 'black'
+                                    }
+                                };
+                                var resids_layout = {
+                                    // title: 'Residuals for {{this_source.psr_id}}',
+                                    xaxis: {
+                                        // title: 'MJD',
+                                        showticklabels: false,
+                                        showline: false,
+                                        showgrid: false,
+                                        zeroline: true
+                                    },
+                                    yaxis: {
+                                        // title: 'Residual (us)',
+                                        showticklabels: false,
+                                        showline: false,
+                                        showgrid: false,
+                                        zeroline: true
+                                    },
+                                    showlegend: false,
+                                    margin: {'t':0,'l':0,'b':0,'r':0}
+                                };
 
-                        // Add a line at y=0
-                        var zero_line = {
-                            x: [resids["mjd"][0], resids["mjd"][resids["mjd"].length-1]],
-                            y: [0, 0],
-                            mode: 'lines',
-                            type: 'scatter',
-                            line: {
-                                color: 'grey',
-                                width: 1
-                            }
-                        };
-                        Plotly.newPlot('resids_{{this_source.psr_id}}', [zero_line, resids_plot], resids_layout);
-                    </script>
-                </tr>
+                                // Add a line at y=0
+                                var zero_line = {
+                                    x: [resids["mjd"][0], resids["mjd"][resids["mjd"].length-1]],
+                                    y: [0, 0],
+                                    mode: 'lines',
+                                    type: 'scatter',
+                                    line: {
+                                        color: 'grey',
+                                        width: 1
+                                    }
+                                };
+                                Plotly.newPlot('resids_{{this_source.psr_id}}', [zero_line, resids_plot], resids_layout);
+                            </script>
+                        </div>
+                    </div>
+                </div>
             {% endfor %}
-        </tbody>
-    </table>
 {% endblock %}
