--- a/monitor/templates/index.html
+++ b/monitor/templates/index.html
@@ -25,7 +25,8 @@
                                     mode: 'markers',
                                     type: 'scatter',
                                     marker: {
-                                        color: 'black'
+                                        color: 'black',
+                                        size: 5
                                     }
                                 };
                                 var resids_layout = {
