--- a/monitor/templates/index.html
+++ b/monitor/templates/index.html
@@ -4,6 +4,7 @@
 {% block title %}CHAMPSS Timing Monitor{% endblock %}
 
 {% block content %}
+    <h3>Dashboard</h3>
     <div class="row">
         {% for this_source in sources %}
             <div class="col-lg-6" id="div_{{this_source.psr_id_esc}}" style="cursor:pointer;">
