--- a/monitor/templates/base.html
+++ b/monitor/templates/base.html
@@ -9,37 +9,42 @@
     <!-- Bootstrap CSS and JS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
     <!-- Plotly -->
     <script src="https://cdn.plot.ly/plotly-2.35.2.min.js" charset="utf-8"></script>
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary" style="height: 3em;">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">CHAMPSS Timing</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="/">Pulsars</a>
-                    </li>
-                </ul>
-            </div>
+    <div class="offcanvas offcanvas-start show text-bg-dark" tabindex="-1" id="offcanvasDark" data-bs-scroll="true" data-bs-backdrop="false" aria-labelledby="offcanvasDarkLabel" style="width: 3.5em; ">
+        <div class="offcanvas-body" >
+            <ul class="nav nav-pills nav-flush flex-column mb-auto text-center">
+                <li class="nav-item">
+                    <a href="/" style="color: white; ">
+                        <i class="bi bi-speedometer"></i>
+                    </a>
+                </li>
+            </ul>
         </div>
-    </nav>
+        <div class="offcanvas-body" style="position: absolute; bottom: 0; left: 50%; width: 20em; transform: translate(-50%, -220%) rotate(-90deg); line-height: 0.8em; text-overflow: ellipsis; ">
+            <b>CHAMPSS Timing Pipeline</b><br>
+            <small>{{ sources.psr_dir }}</small>
+        </div>
+    </div>
     <br>
-    <div class="container-fluid">
+    <div class="" style="margin-left: 4.5em; padding-left: 5px; padding-right: 20px; ">
         {% block content %}
         {% endblock %}
+<!--        <center>-->
+<!--            <br>-->
+<!--            <div style="width: 100%; height: 50px;">-->
+<!--                <small>Monitor loaded at <code>{{ sources.psr_dir }}</code>.</small>-->
+<!--            </div>-->
+<!--        </center>-->
     </div>
-    <center>
-        <br>
-        <div style="width: 100%; height: 50px;">
-            <small>Monitor loaded at <code>{{ sources.psr_dir }}</code>.</small>
-        </div>
-    </center>
+    <script>
+        const tooltipTriggerList = document.querySelectorAll('[data-bs-toggle="tooltip"]')
+        const tooltipList = [...tooltipTriggerList].map(tooltipTriggerEl => new bootstrap.Tooltip(tooltipTriggerEl))
+    </script>
 </body>
 </html>
