setting val=0 for unfitted params

--- a/monitor/templates/base.html
+++ b/monitor/templates/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>{% block title %}ChampSS Timing{% endblock %}</title>
+    <title>{% block title %}CHAMPSS Timing{% endblock %}</title>
 
     <!-- JQuery -->
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
