--- a/monitor/templates/base.html
+++ b/monitor/templates/base.html
@@ -24,7 +24,8 @@
             height: 120px;
             overflow-y: auto;
             overflow-x: hidden;
-            align-content: baseline;
+            /*align-content: baseline;*/
+            align-content: flex-end;
         }
 
         .square {
